# adsp-ldr

./: .gitignore  LICENSE  README.md  meson.build
.github/workflows/: build.yml  ci.yml
include/: blackfin_defines.h  dxe_jump.h  headers.h  helpers.h  ldr.h  ldr_elf.h  lfd.h  sdp.h
src/: helpers.c  ldr.c  ldr_elf.c  lfd.c  lfd_bf506.c  lfd_bf518.c  lfd_bf527.c  lfd_bf533.c  lfd_bf537.c  lfd_bf548.c  lfd_bf561.c  lfd_bf592.c  lfd_bf609.c  lfd_sc589.c
src/ldr/: blackfin_defines.h  config.h  dxe_jump.h  dxes.h  headers.h  helpers.c  helpers.h  ldr.c  ldr.h  ldr_elf.c  ldr_elf.h  lfd.c  lfd.h  lfd_bf506.c  lfd_bf518.c  lfd_bf527.c  lfd_bf533.c  lfd_bf537.c  lfd_bf548.c  lfd_bf561.c  lfd_bf592.c  lfd_bf609.c  lfd_sc589.c  sdp.h  termios-mingw.c
tests/: verify-bf548-md5.sh  verify-ubootspl-md5.sh
tests/data/: u-boot-spl
utils/: version.sh
